{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 11,
  "lineage": "628d470f-091d-588e-f160-0180af075655",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c87da52a9cb24c98",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-208-89-62.compute-1.amazonaws.com",
            "public_ip": "18.208.89.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT con elastic IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207805467757:internet-gateway/igw-05b8676311a8a0564",
            "id": "igw-05b8676311a8a0564",
            "owner_id": "207805467757",
            "tags": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-08d6a64d37249a72b"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c87da52a9cb24c98",
            "id": "nat-0a7a54de4b593464d",
            "network_interface_id": "eni-02bbcc441eaa8de1c",
            "private_ip": "10.0.0.189",
            "public_ip": "18.208.89.62",
            "subnet_id": "subnet-09ffdc178c7d1e9cb",
            "tags": {
              "Name": "NAT Gateway alocada a la subnet pública"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public_subnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-064ee6b64c7d12386",
            "owner_id": "207805467757",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a7a54de4b593464d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla de Ruteo Privada"
            },
            "vpc_id": "vpc-08d6a64d37249a72b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_nat_gateway.NAT_GW",
            "aws_subnet.public_subnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b53dde50ffe9bdee",
            "owner_id": "207805467757",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b8676311a8a0564",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla de Ruteo Pública"
            },
            "vpc_id": "vpc-08d6a64d37249a72b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_RT_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067bb7e5f83876f79",
            "route_table_id": "rtb-064ee6b64c7d12386",
            "subnet_id": "subnet-02218b2f4203cd81a"
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_nat_gateway.NAT_GW",
            "aws_route_table.Private_RT",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_RT_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2bfb35702895dde",
            "route_table_id": "rtb-0b53dde50ffe9bdee",
            "subnet_id": "subnet-09ffdc178c7d1e9cb"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.Public_RT",
            "aws_subnet.public_subnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207805467757:subnet/subnet-02218b2f4203cd81a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.192/26",
            "id": "subnet-02218b2f4203cd81a",
            "map_public_ip_on_launch": false,
            "owner_id": "207805467757",
            "tags": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-08d6a64d37249a72b"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207805467757:subnet/subnet-09ffdc178c7d1e9cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.128/26",
            "id": "subnet-09ffdc178c7d1e9cb",
            "map_public_ip_on_launch": false,
            "owner_id": "207805467757",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-08d6a64d37249a72b"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207805467757:vpc/vpc-08d6a64d37249a72b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0e9d1f5a96803cddf",
            "default_route_table_id": "rtb-0360d0570cce85003",
            "default_security_group_id": "sg-00e6ba5722ffde758",
            "dhcp_options_id": "dopt-0f55f875",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08d6a64d37249a72b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0360d0570cce85003",
            "owner_id": "207805467757",
            "tags": {
              "Name": "My_VPC"
            }
          }
        }
      ]
    }
  ]
}